<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_search"
          android:title="@string/action_search"
          android:icon="@drawable/ic_search_white_24dp"
          app:showAsAction="collapseActionView|ifRoom"
          app:actionViewClass="android.support.v7.widget.SearchView"/>
    <item android:id="@+id/action_notifications"
          android:title="@string/action_notifications"
          app:showAsAction="always"
          android:icon="@drawable/ic_notifications_white_24dp"/>
    <item android:id="@+id/action_cart"
          android:title="@string/action_cart"
          app:showAsAction="always"
          android:icon="@drawable/ic_menu_notifications"/>
</menu>
